home/static/css/global/global.css
/* ... */
.language_drop:hover > a > span,
.language_drop:active > a > span,
.language_drop:focus > a > span {
  border-top: 4px solid transparent;
  border-bottom: 4px solid #303030;
  margin: -2px 0 0;
}

.language_drop:hover .drop,
.language_drop:active .drop,
.language_drop:focus .drop {
  transition: all 0.2s linear;
  opacity: 1;
  visibility: visible;
}

.language_drop .drop a {
  font-style: normal;
  font-weight: 600;
  font-size: 10px;
  line-height: 14px;
  color: #303030;
  text-decoration: none;
  display: inline-block;
  vertical-align: top;
  position: relative;
}

.language_drop .drop li{
  width: 100%;
  margin: 0 0 8px;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
}

.language_drop .drop .selected a {
  padding: 0 12px 0 0;
}

.language_drop .drop .selected a:after {
  position: absolute;
  content: "";
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  background: url("/static/icons/checked.svg") no-repeat;
  width: 8px;
  height: 6px;
}

#header {
  border: 1px solid #EFEFEF;
  width: 100%;
  box-sizing: border-box;
  border-radius: 0 0 8px 8px;
  align-items: center;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
}

#header:after {
  display: block;
  content: "";
  clear: both;
}

.header-holder {
  align-items: center;
  padding: 12px 32px;
  flex: 1;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
  max-width: 664px;
  margin: 0 auto;
}

.header-content {
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
  flex: 1;
  justify-content: space-between;
}

.logo-holder {
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
  flex: 1;
}

.logo-holder a {
  display: block;
  max-width: 102px;
}

.logo-holder img {
  width: 100%;
  height: auto;
}

#header .btn-holder,
#header .search__form {
  display: none;
}

.rtl .form-holder .js-search-btn img {
  padding-left: 0;
  padding-right: 10px;
  border-left-width: 0;
  border-right: 1px solid #EFEFEF;
  margin-left: 0;
  margin-right: 12px;
}

.form-holder .js-search-btn img{
  margin: 0 0 0 12px;
  border-left: 1px solid #EFEFEF;
  padding: 5px 0;
  padding-left: 15px;
  width: 34px;
  height: 26px;
}

.footer-head #header {
  border-radius: 0;
  border-width: 0 0 1px 0;
}
.footer-head #header,
.footer-head .header-holder {
  /* padding-left: 0;
  padding-right: 0; */
  flex-wrap: wrap;
}

.footer-head #header .js-search-btn {
  display: none;
}

.footer-head #header .language__select select {
  margin-right: 0;
}

.footer-head #header .form-holder {
  width: 100%;
  padding: 32px 0 20px;
}

.footer-head #header .search__form {
  display: block;
  width: 100%;
}

@media screen and (max-width: 359px) {
  .header-holder {
    padding: 12px 20px;
  }
  .logo-holder a {
    max-width: 68px;
  }
  .language__select select {
    max-width: 74px;
    font-size: 10px;
    background-position: 60px;
  }
  .language_drop > a {
    min-width: 80px;
    /* max-width: 80px; */
  }

  #content-wrap .content {
    padding: 16px 0;
  }

  .footer {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media screen and (min-width: 360px) {
  .footer .top-level {
    margin-top: 0;
    border: 0;
    padding-top: 8px;
  }

  .footer .bottom-level {
    margin-top: 16px;
    padding-top: 8px;
  }

  .footer .footer__copyright {
    padding-top: 20px;
  }
}
@media screen and (max-width: 767px) {
  .content {
    padding: 16px 0;
  }
}
.rtl .language_drop > a {
  padding: 5px 12px 5px 20px;
}
.rtl .language_drop > a > span {
  right: auto;
  left: 11px;
}

@media screen and (min-width: 768px) {
  .footer-head {
    display: none;
  }
  #header {
    border-radius: 0;
  }
  .header-holder {
    padding: 12px 0;
    max-width: 1000px;
  }
  .logo-holder {
    flex: initial;
  }
  #header .search__form {
    display: block;
    width: 100%;
    max-width: 600px;
  }
  .form-holder .js-search-btn {display: none;}
  .language__select {
    margin-left: 12px;
  }

  .rtl .language__select {
    margin-left: 0;
    margin-right: 12px;
  }

  .header-content {
    justify-content: flex-start;
    padding: 0 16px;
  }
  .form-holder {
    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox;      /* TWEENER - IE 10 */
    display: -webkit-flex;     /* NEW - Chrome */
    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
    max-width: 600px;
    width: 60%;
    flex: 1;
    padding: 0 16px;
    flex-basis: 24.5%;
  }
  .main-wrapper {
    width: 100%;
    display: flex;
    align-items: center;
    box-sizing: border-box;
  }
}
/* ... */

